--- a/src/styles/components/common/cartBag.css
+++ b/src/styles/components/common/cartBag.css
@@ -141,6 +141,10 @@
   justify-content: space-between;
 }
 
+.cartBag_itemHead {
+  width: 70%;
+}
+
 .cartBag_itemName {
   text-transform: uppercase;
 }
